// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyDefaultPlugins > should apply default plugins correctly 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "devtool": "cheap-module-source-map",
  "experiments": {
    "asyncWebAssembly": true,
    "rspackFuture": {
      "disableTransformByDefault": true,
      "newResolver": true,
    },
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "exclude": [
          "<ROOT>/node_modules/<PNPM_INNER>/core-js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "minimize": false,
    "runtimeChunk": {
      "name": "bundler-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-axios": {
          "name": "lib-axios",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "plugins": [
    HtmlBasicPlugin {
      "HtmlPlugin": [Function],
      "name": "HtmlBasicPlugin",
      "options": {
        "HtmlPlugin": [Function],
        "info": {},
      },
    },
    Plugin {
      "_options": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""development"",
      },
      "name": "DefinePlugin",
    },
    Plugin {
      "_options": {
        "prefix": "Client",
        "profile": false,
      },
      "name": "ProgressPlugin",
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
  },
  "target": [
    "web",
    "es5",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctly when prod 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": false,
  },
  "devtool": "hidden-source-map",
  "experiments": {
    "asyncWebAssembly": true,
    "rspackFuture": {
      "disableTransformByDefault": true,
      "newResolver": true,
    },
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": false,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "exclude": [
          "<ROOT>/node_modules/<PNPM_INNER>/core-js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "chunkIds": "deterministic",
    "minimize": true,
    "minimizer": [
      Plugin {
        "_options": {
          "asciiOnly": true,
          "comments": "false",
          "dropConsole": false,
          "exclude": undefined,
          "extractComments": "true",
          "include": undefined,
          "keepClassNames": false,
          "keepFnNames": false,
          "passes": 1,
          "pureFuncs": [],
          "test": undefined,
        },
        "name": "SwcJsMinimizerRspackPlugin",
      },
      Plugin {
        "_options": false,
        "name": "SwcCssMinimizerRspackPlugin",
      },
    ],
    "runtimeChunk": {
      "name": "bundler-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-axios": {
          "name": "lib-axios",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].[contenthash:8].js",
    "cssChunkFilename": "static/css/async/[name].[contenthash:8].css",
    "cssFilename": "static/css/[name].[contenthash:8].css",
    "filename": "static/js/[name].[contenthash:8].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "plugins": [
    HtmlBasicPlugin {
      "HtmlPlugin": [Function],
      "name": "HtmlBasicPlugin",
      "options": {
        "HtmlPlugin": [Function],
        "info": {},
      },
    },
    Plugin {
      "_options": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""production"",
      },
      "name": "DefinePlugin",
    },
    RemoveCssSourcemapPlugin {
      "htmlPlugin": [Function],
      "name": "RemoveCssSourcemapPlugin",
    },
    Plugin {
      "_options": {
        "prefix": "Client",
        "profile": false,
      },
      "name": "ProgressPlugin",
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "htmlPlugin": [Function],
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [
        /bundler-runtime\\(\\[\\.\\]\\.\\+\\)\\?\\\\\\.js\\$/,
      ],
      "styleTests": [],
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
  },
  "target": [
    "web",
    "es5",
  ],
}
`;

exports[`applyDefaultPlugins > should apply default plugins correctyly when target = node 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": true,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": false,
  },
  "devtool": "cheap-module-source-map",
  "experiments": {
    "asyncWebAssembly": true,
    "rspackFuture": {
      "disableTransformByDefault": true,
      "newResolver": true,
    },
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
      {
        "test": /\\\\\\.node\\$/,
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/node-loader",
            "options": {
              "name": [Function],
            },
          },
        ],
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "targets": [
                  "node >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "targets": [
                  "node >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Server",
  "optimization": {
    "minimize": false,
    "splitChunks": false,
  },
  "output": {
    "chunkFilename": "bundles/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "bundles/[name].js",
    "hashFunction": "xxhash64",
    "libraryTarget": "commonjs2",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "plugins": [
    Plugin {
      "_options": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""test"",
      },
      "name": "DefinePlugin",
    },
    Plugin {
      "_options": {
        "prefix": "Server",
        "profile": false,
      },
      "name": "ProgressPlugin",
    },
  ],
  "resolve": {
    "conditionNames": [
      "require",
      "node",
    ],
    "extensions": [
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
  },
  "target": "node",
}
`;

exports[`tools.rspack > should match snapshot 1`] = `
{
  "builtins": {
    "css": {
      "modules": {
        "exportsOnly": false,
        "localIdentName": "[path][name]__[local]-[hash:6]",
        "localsConvention": "camelCase",
      },
    },
  },
  "context": "<ROOT>",
  "devServer": {
    "hot": true,
  },
  "devtool": "cheap-module-source-map",
  "experiments": {
    "asyncWebAssembly": true,
    "rspackFuture": {
      "disableTransformByDefault": true,
      "newResolver": true,
    },
  },
  "infrastructureLogging": {
    "level": "error",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": /\\\\\\.test\\$/,
        "use": [
          {
            "loader": "builtin:sass-loader",
          },
        ],
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/font/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|ttc\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/image/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(png\\|jpg\\|jpeg\\|gif\\|bmp\\|webp\\|ico\\|apng\\|avif\\|tiff\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/media/[name].[contenthash:8][ext]",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.\\(mp4\\|webm\\|ogg\\|mp3\\|wav\\|flac\\|aac\\|mov\\)\\$/i,
      },
      {
        "oneOf": [
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "resourceQuery": /\\(__inline=false\\|url\\)/,
            "type": "asset/resource",
          },
          {
            "resourceQuery": /inline/,
            "type": "asset/inline",
          },
          {
            "generator": {
              "filename": "static/svg/[name].[contenthash:8].svg",
            },
            "parser": {
              "dataUrlCondition": {
                "maxSize": 10000,
              },
            },
            "type": "asset",
          },
        ],
        "test": /\\\\\\.svg\\$/i,
      },
      {
        "dependency": "url",
        "generator": {
          "filename": "static/wasm/[hash].module.wasm",
        },
        "test": /\\\\\\.wasm\\$/,
        "type": "asset/resource",
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.css\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/less-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/less",
                  "lessOptions": {
                    "javascriptEnabled": true,
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.less\\$/,
      },
      {
        "oneOf": [
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "resolve": {
              "preferRelative": true,
            },
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<ROOT>/packages/shared/compiled/postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      {
                        "browsers": [
                          "chrome >= 87",
                          "edge >= 88",
                          "firefox >= 78",
                          "safari >= 14",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "chrome >= 87",
                            "edge >= 88",
                            "firefox >= 78",
                            "safari >= 14",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/resolve-url-loader",
                "options": {
                  "join": [Function],
                  "sourceMap": false,
                },
              },
              {
                "loader": "<ROOT>/packages/shared/compiled/sass-loader",
                "options": {
                  "implementation": "<ROOT>/packages/shared/compiled/sass",
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.s\\(a\\|c\\)ss\\$/,
      },
      {
        "exclude": [
          "<ROOT>/node_modules/<PNPM_INNER>/core-js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "mimetype": {
          "or": [
            "text/javascript",
            "application/javascript",
          ],
        },
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "shippedProposals": true,
                "targets": [
                  "chrome >= 87",
                  "edge >= 88",
                  "firefox >= 78",
                  "safari >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.toml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/toml-loader",
          },
        ],
      },
      {
        "test": /\\\\\\.ya\\?ml\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "<ROOT>/packages/shared/compiled/yaml-loader",
          },
        ],
      },
    ],
  },
  "name": "Client",
  "optimization": {
    "minimize": false,
    "runtimeChunk": {
      "name": "bundler-runtime",
    },
    "splitChunks": {
      "cacheGroups": {
        "lib-axios": {
          "name": "lib-axios",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
        },
        "lib-lodash": {
          "name": "lib-lodash",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
        },
        "lib-polyfill": {
          "name": "lib-polyfill",
          "priority": 0,
          "reuseExistingChunk": true,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "all",
      "enforceSizeThreshold": 50000,
    },
  },
  "output": {
    "chunkFilename": "static/js/async/[name].js",
    "cssChunkFilename": "static/css/async/[name].css",
    "cssFilename": "static/css/[name].css",
    "filename": "static/js/[name].js",
    "hashFunction": "xxhash64",
    "path": "<ROOT>/dist",
    "pathinfo": false,
    "publicPath": "/",
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
  "plugins": [
    TestPlugin {
      "name": "TestPlugin",
    },
    HtmlBasicPlugin {
      "HtmlPlugin": [Function],
      "name": "HtmlBasicPlugin",
      "options": {
        "HtmlPlugin": [Function],
        "info": {},
      },
    },
    Plugin {
      "_options": {
        "process.env.ASSET_PREFIX": """",
        "process.env.NODE_ENV": ""development"",
      },
      "name": "DefinePlugin",
    },
    Plugin {
      "_options": {
        "prefix": "Client",
        "profile": false,
      },
      "name": "ProgressPlugin",
    },
  ],
  "resolve": {
    "alias": {
      "core-js": "<ROOT>/node_modules/<PNPM_INNER>/core-js",
    },
    "extensions": [
      ".js",
      ".jsx",
      ".mjs",
      ".json",
    ],
  },
  "target": [
    "web",
    "es5",
  ],
}
`;
